--- a/assets/_sass/_home.scss
+++ b/assets/_sass/_home.scss
@@ -23,6 +23,7 @@
     position: relative;
     z-index: -1;
     opacity: .8;
+    transition:opacity .5s ease-out;
   }
 
   .category {
@@ -33,16 +34,54 @@
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 0px 10px 0px 10px;
   }
+
   .project-name {
+    visibility: visible;
     position: absolute;
     top: 34%;
-    margin-left: 6rem;
+    margin-left: 25%;
     margin-right: 3rem;
     text-shadow: 1px 1px 2px color(primary-color);
   }
+
+  .description {
+    visibility: hidden;
+    text-align: center;
+    position: absolute;
+    margin-left: 10%;
+    margin-right: 10%;
+    top: 20%;
+  }
+  .buttons {
+    visibility: hidden;
+    position: absolute;
+    margin-top: 51%;
+    left: 7%;
+    font-size: medium;
+    @include desktop {
+      left: 12%;
+    }
+  }
+
   .tools-used {
     margin: 1rem 0rem 1.5rem 0rem;
     background-color: color(primary-color);
     text-align: center;
+  }
+}
+
+.project-card:hover {
+  img {
+    opacity: .3;
+    transition:all .5s ease-out;
+  }
+  .project-name {
+    visibility: hidden;
+  }
+  .description {
+    visibility: visible;
+  }
+  .buttons {
+    visibility: visible;
   }
 }
