--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -41,6 +41,25 @@
   transition: background-color 0.5s ease-out;
 }
 
+.trans-button {
+  cursor: pointer;
+  color: color(secondary-color);
+  font-family: $base-font-family;
+  border: 1px solid color(secondary-color);
+  border-radius: 5px;
+  padding: 8px;
+  transition: background-color 0.5s ease-out;
+}
+
+.trans-button:hover {
+  background-color: color(secondary-color);
+  color: color(primary-color);
+  transition: background-color 0.5s ease-out;
+  .fab {
+    color: color(primary-color);
+  }
+}
+
 .fab {
   color: color(secondary-color);
   transition: background-color 0.5s ease-out;
@@ -62,6 +81,12 @@
 
 .margin-top {
   margin-top: $padding-unit;
+}
+
+.margin-left {
+  @include desktop {
+    margin-left: 1rem;
+  }
 }
 
 
