--- a/assets/main.css
+++ b/assets/main.css
@@ -27,7 +27,11 @@ h1 {
   font-size: 60px;
 }
 
-@media (min-width: 970px) {
+a {
+  text-decoration: none;
+}
+
+@media (min-width: 1160px) {
   .visible-xs {
     display: none;
   }
@@ -37,7 +41,7 @@ h1 {
   display: none;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   .hidden-xs {
     display: block;
   }
@@ -75,6 +79,28 @@ h1 {
   transition: background-color 0.5s ease-out;
 }
 
+.trans-button {
+  cursor: pointer;
+  color: #FF721E;
+  font-family: "Jura", sans-serif;
+  border: 1px solid #FF721E;
+  border-radius: 5px;
+  padding: 8px;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+.trans-button:hover {
+  background-color: #FF721E;
+  color: #1E2A39;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+.trans-button:hover .fab {
+  color: #1E2A39;
+}
+
 .fab {
   color: #FF721E;
   -webkit-transition: background-color 0.5s ease-out;
@@ -94,7 +120,7 @@ h1 {
   grid-gap: 3rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   .three-columns {
     grid-auto-flow: column;
     -ms-grid-columns: (1fr)[3];
@@ -106,11 +132,17 @@ h1 {
   margin-top: 1.5rem;
 }
 
+@media (min-width: 1160px) {
+  .margin-left {
+    margin-left: 1rem;
+  }
+}
+
 .section {
   margin: 4rem 3rem 3rem 3rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   .section {
     margin: 6rem 3rem 3rem 3rem;
   }
@@ -120,7 +152,7 @@ h1 {
   margin-bottom: 3rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   .container-middle {
     margin: 0rem 10rem 5rem 10rem;
   }
@@ -129,7 +161,7 @@ h1 {
 /************************************
 *     Anything Related to Fonts!    *
 ************************************/
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   .center-text {
     text-align: center;
   }
@@ -168,7 +200,7 @@ header nav {
   padding: 1rem 0rem 0rem 3rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header nav {
     display: -ms-grid;
     display: grid;
@@ -182,7 +214,7 @@ header nav .navigation {
   list-style-type: none;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header nav .navigation {
     display: block;
   }
@@ -196,7 +228,7 @@ header nav li a {
   text-decoration: none;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header nav li a {
     float: left;
     margin: 0rem 1.3rem 0rem 0rem;
@@ -217,7 +249,7 @@ header nav li a:hover {
   transition: background-color 0.5s ease-out;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header nav li a:hover {
     margin: 0rem 1.3rem 0rem 0rem;
     -webkit-transition: background-color 0.5s ease-out;
@@ -247,7 +279,7 @@ header .header-container {
       grid-template-areas: "intro" "pictures";
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .header-container {
     -ms-grid-columns: 3fr 3fr;
         grid-template-columns: 3fr 3fr;
@@ -263,7 +295,7 @@ header .intro {
   margin-right: 4rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .intro {
     padding-left: 3rem;
     margin: 2rem 3rem 5rem 3rem;
@@ -284,7 +316,7 @@ header .intro .horizontal-list {
   margin-left: 2rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .intro .horizontal-list {
     margin-left: 0rem;
   }
@@ -295,7 +327,7 @@ header .intro .horizontal-list li:nth-child(1) {
   margin-top: 3rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .intro .horizontal-list li:nth-child(1) {
     position: inherit;
     margin-top: 0rem;
@@ -312,7 +344,7 @@ header .pictures {
   margin: 5rem 0rem 8rem 2rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .pictures {
     margin: 2rem 0rem 0rem 9rem;
   }
@@ -324,7 +356,7 @@ header .pictures #box:nth-child(2) {
   margin-top: 6.7rem;
 }
 
-@media (min-width: 970px) {
+@media (min-width: 1160px) {
   header .pictures #box:nth-child(2) {
     padding-left: 88px;
     position: absolute;
@@ -387,6 +419,8 @@ header .pictures #picture {
   position: relative;
   z-index: -1;
   opacity: .8;
+  -webkit-transition: opacity .5s ease-out;
+  transition: opacity .5s ease-out;
 }
 
 .project-card .category {
@@ -399,17 +433,59 @@ header .pictures #picture {
 }
 
 .project-card .project-name {
+  visibility: visible;
   position: absolute;
   top: 34%;
-  margin-left: 6rem;
+  margin-left: 25%;
   margin-right: 3rem;
   text-shadow: 1px 1px 2px #1E2A39;
+}
+
+.project-card .description {
+  visibility: hidden;
+  text-align: center;
+  position: absolute;
+  margin-left: 10%;
+  margin-right: 10%;
+  top: 20%;
+}
+
+.project-card .buttons {
+  visibility: hidden;
+  position: absolute;
+  margin-top: 51%;
+  left: 7%;
+  font-size: medium;
+}
+
+@media (min-width: 1160px) {
+  .project-card .buttons {
+    left: 12%;
+  }
 }
 
 .project-card .tools-used {
   margin: 1rem 0rem 1.5rem 0rem;
   background-color: #1E2A39;
   text-align: center;
+}
+
+.project-card:hover img {
+  opacity: .3;
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+}
+
+.project-card:hover .project-name {
+  visibility: hidden;
+}
+
+.project-card:hover .description {
+  visibility: visible;
+}
+
+.project-card:hover .buttons {
+  visibility: visible;
 }
 
 /**
