--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,7 +5,7 @@
 @charset "utf-8";
 
 // Define the default values for each variable.
-$desktop-size: 970px;
+$desktop-size: 1160px;
 
 $base-font-family: 'Jura', sans-serif;
 $base-font-size: 18px;
@@ -75,6 +75,10 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 60px;
+}
+
+a {
+  text-decoration: none;
 }
 
 @import
