--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,11 +28,11 @@
             <p>I’m Fabio, a Portuguese expat living in the UK. I’m currently working for an airline as cabin crew and learning how to code in my free time.</p>
             <h1 class="margin-top">Let's Chat!</h1>
             <ul class="horizontal-list">
-                <li><a href="mailto:fabiorosado@outlook.com"><button class="full-button">Say Hello</button></a></li>
-                <li><a href="https://github.com/FabioRosado" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
-                <li><a href="https://twitter.com/FabioRosado_" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/fabiorosado/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                <li><a href="https://www.instagram.com/fabiorosado/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+                <li><a href="mailto:{{ site.email }}"><button class="full-button">Say Hello</button></a></li>
+                <li><a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
+                <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/{{ site.instagram_username }}/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
             </ul>
         </div>
         <div class="pictures">
