--- a/assets/main.css
+++ b/assets/main.css
@@ -128,6 +128,23 @@ a {
   }
 }
 
+.four-by-four {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 1rem;
+}
+
+@media (min-width: 1160px) {
+  .four-by-four {
+    grid-gap: .5rem;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: repear(2, 1fr);
+        grid-template-rows: repear(2, 1fr);
+  }
+}
+
 .margin-top {
   margin-top: 1.5rem;
 }
@@ -486,6 +503,43 @@ header .pictures #picture {
 
 .project-card:hover .buttons {
   visibility: visible;
+}
+
+.post-card {
+  color: #FF721E;
+  background-color: #1E2A39;
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.post-card .post-image {
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+  z-index: -1;
+  opacity: .8;
+}
+
+.post-card .card-title {
+  position: absolute;
+  bottom: 0;
+  margin: 0rem 1rem 1rem 1rem;
+}
+
+.post-card .card-title .category {
+  background-color: #FF721E;
+  color: #1E2A39;
+  font-family: "Jura", sans-serif;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: small;
+}
+
+.post-card .card-title h4 {
+  margin-top: .5rem;
 }
 
 /**
