Add contact me section on home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
             <ul class="horizontal-list">
                 <li><a href="mailto:{{ site.email }}"><button class="full-button">Say Hello</button></a></li>
                 <li><a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
+                <li><a href="https://dev.to/{{ site.dev_username }}/" target="_blank"><i class="fab fa-2x fa-dev"></i></i></a></li>
                 <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
                 <li><a href="https://www.instagram.com/{{ site.instagram_username }}/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
