--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,4 +85,5 @@ a {
   "_sass/_layout.scss",
   "_sass/_header.scss",
   "_sass/_home.scss",
+  "_sass/footer.scss",
   "_sass/_syntax-highlighting.scss"
