--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
         </button>
         <ul class="navigation">
             <li>
-                <a href="/">Home</a>
+                <a href="{{site.url}}">Home</a>
             </li>
             {% for link in site.pages %}
                 {% if link.title != None %}
