Remove about.html add link to about section on home.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
             <li>
                 <a href="{{site.url}}">Home</a>
             </li>
+            <li>
+                <a href="{{site.url}}/#about">About</a>
+            </li>
             {% for link in site.pages %}
                 {% if link.title != None %}
                     <li>
