--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head.html %}
     <body>
-      {% include header.html %}
+      {% include navigation.html %}
 
         {{ content }}
 
