--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,112 +1,119 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+  {% include head.html %}
+    <body>
+        {% include header.html %}
 
-<div class="section">
-        <div class="container-middle center-text">
-            <h1>Projects</h1>
-        </div>
-        <div class="three-columns">
-            {% for project in site.categories.Projects limit: 3%}  
-    
-            <div class="project-card drop-shadow">
-                <div class="category small-font">
-                    {{ project.tag-icon }} {{ project.tag }}
+        <div class="section">
+                <div class="container-middle center-text">
+                    <h1>Projects</h1>
                 </div>
-                <div class="project-name">
-                    <h3 class="white-text">{{project.title}}</h3>
-                </div>
-                <div class="description">
-                    <div class="white-text small-font">
-                        {{ project.excerpt | truncate: 165 }}
-                    </div>
-                </div>
-                <div class="buttons">
-                    <a href="{{ project.url }}" class="trans-button"><i class="fas fa-folder-open"></i> Read more</a>
-                    <a href="{{ project.source}}" class="trans-button margin-left" target="_blank"><i class="fab fa-github-square"></i> Source Code</a>
-                </div>
-                <img class="project-image" src="../assets/images/{{project.image}}">
-                <div class="tools-used spaced-text">
-                    <p>{{ project.tech }}</p>
-                </div>
-                </div>
-            {% endfor %}
-        </div>
-</div>
-
-<div class="section">
-    <div class="container-middle center-text">
-        <h1><a name="about">About Me</a></h1>
-        <p>
-            I've always been interested in coding and creating my own programs. After completing the online course Intro to CS and programming with python from MIT at edx.org
-            I've decided that it was time to dedicate my free time to learn more about coding.  MY goal is to become a good developer and work in challenging new things.
-        </p>
-    </div>
-    <div class="three-columns">
-        <div class="about-card drop-shadow">
-            <i class="fas fa-3x fa-language"></i>
-            <h2 class="white-text">Languages</h2>
-            <p class="spaced-text">HTML CSS Python</p>
-            <p class="spaced-text">Javascript SASS</p>
-        </div>
-        <div class="about-card drop-shadow">
-            <i class="fas fa-3x fa-toolbox"></i>
-            <h2 class="white-text">Dev Tools</h2>
-            <p class="spaced-text">Pycharm Terminal</p>
-            <p class="spaced-text">AdobeXD Postman</p>
-            <p class="spaced-text">VSCode Tox Git</p>
-        </div>
-        <div class="about-card drop-shadow">
-            <i class="fas fa-3x fa-cogs"></i>
-            <h2 class="white-text">Frameworks</h2>
-            <p class="spaced-text">Jekyll Bulma </p>
-            <p class="spaced-text">VueJS Electron</p>
-            <p class="spaced-text">Bootstrap React</p>
-        </div>
-    </div>
-</div>
-
-<div class="section">
-    <div class="container-middle center-text">
-        <h1>Blog</h1>
-    </div>
-    <div class="four-by-four">
-        {% assign post_counter = 0 %}
-        {% for post in site.posts %}
-            {% if post_counter >= 8 %}
-                {% break%}
-            {% elsif post.url contains 'projects' %}
-            {% else %}
-                {% assign post_counter = post_counter | plus: 1 %}
-                <div class="post-card">
-                    <a href="{{post.url}}">
+                <div class="three-columns">
+                    {% for project in site.categories.Projects limit: 3%}  
+            
+                    <div class="project-card drop-shadow">
+                        <div class="category small-font">
+                            {{ project.tag-icon }} {{ project.tag }}
+                        </div>
+                        <div class="project-name">
+                            <h3 class="white-text">{{project.title}}</h3>
+                        </div>
                         <div class="description">
-                            <p class="white-text small-font margin-bottom">{{ post.excerpt | truncate:160 }}</p>
-                            <span class="trans-button small-font">Read More <i class="fas fa-angle-double-right"></i></span>
+                            <div class="white-text small-font">
+                                {{ project.excerpt | truncate: 165 }}
+                            </div>
                         </div>
-                        <div class="card-title">
-                            <span class="category">{{ post.category_icon }} {{ post.categories }}</span>
-                            <h4 class="white-text">{{ post.title }}</h4>
+                        <div class="buttons">
+                            <a href="{{ project.url }}" class="trans-button"><i class="fas fa-folder-open"></i> Read more</a>
+                            <a href="{{ project.source}}" class="trans-button margin-left" target="_blank"><i class="fab fa-github-square"></i> Source Code</a>
                         </div>
-                        <img class="post-image" src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title | escape}}">
-                    </a>
+                        <img class="project-image" src="../assets/images/{{project.image}}">
+                        <div class="tools-used spaced-text">
+                            <p>{{ project.tech }}</p>
+                        </div>
+                        </div>
+                    {% endfor %}
                 </div>
-            {% endif %}
-        {% endfor%}
-    </div>
-</div>
+        </div>
 
-<div class="contact-area">
-    <div class="contact-text">
-        <h1>Contact Me</h1>
-        <p>Want to get in touch with me? Request more information about myself or my experience? Would you like to know what is my favourite ice cream or pizza? Send me an email or find me on social media, I will reply as quick as possible. I'm always happy to have a chat!</p>
-        <ul class="horizontal-list">
-            <li><a href="mailto:{{ site.email }}"><button class="white-button">Say Hello</button></a></li>
-            <li><a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
-            <li><a href="https://dev.to/{{ site.dev_username }}/" target="_blank"><i class="fab fa-2x fa-dev"></i></i></a></li>
-            <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
-            <li><a href="https://www.instagram.com/{{ site.instagram_username }}/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
-        </ul>
-    </div>
-</div>
+        <div class="section">
+            <div class="container-middle center-text">
+                <h1><a name="about">About Me</a></h1>
+                <p>
+                    I've always been interested in coding and creating my own programs. After completing the online course Intro to CS and programming with python from MIT at edx.org
+                    I've decided that it was time to dedicate my free time to learn more about coding.  MY goal is to become a good developer and work in challenging new things.
+                </p>
+            </div>
+            <div class="three-columns">
+                <div class="about-card drop-shadow">
+                    <i class="fas fa-3x fa-language"></i>
+                    <h2 class="white-text">Languages</h2>
+                    <p class="spaced-text">HTML CSS Python</p>
+                    <p class="spaced-text">Javascript SASS</p>
+                </div>
+                <div class="about-card drop-shadow">
+                    <i class="fas fa-3x fa-toolbox"></i>
+                    <h2 class="white-text">Dev Tools</h2>
+                    <p class="spaced-text">Pycharm Terminal</p>
+                    <p class="spaced-text">AdobeXD Postman</p>
+                    <p class="spaced-text">VSCode Tox Git</p>
+                </div>
+                <div class="about-card drop-shadow">
+                    <i class="fas fa-3x fa-cogs"></i>
+                    <h2 class="white-text">Frameworks</h2>
+                    <p class="spaced-text">Jekyll Bulma </p>
+                    <p class="spaced-text">VueJS Electron</p>
+                    <p class="spaced-text">Bootstrap React</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="container-middle center-text">
+                <h1>Blog</h1>
+            </div>
+            <div class="four-by-four">
+                {% assign post_counter = 0 %}
+                {% for post in site.posts %}
+                    {% if post_counter >= 8 %}
+                        {% break%}
+                    {% elsif post.url contains 'projects' %}
+                    {% else %}
+                        {% assign post_counter = post_counter | plus: 1 %}
+                        <div class="post-card">
+                            <a href="{{post.url}}">
+                                <div class="description">
+                                    <p class="white-text small-font margin-bottom">{{ post.excerpt | truncate:160 }}</p>
+                                    <span class="trans-button small-font">Read More <i class="fas fa-angle-double-right"></i></span>
+                                </div>
+                                <div class="card-title">
+                                    <span class="category">{{ post.category_icon }} {{ post.categories }}</span>
+                                    <h4 class="white-text">{{ post.title }}</h4>
+                                </div>
+                                <img class="post-image" src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title | escape}}">
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endfor%}
+            </div>
+        </div>
+
+        <div class="contact-area">
+            <div class="contact-text">
+                <h1>Contact Me</h1>
+                <p>Want to get in touch with me? Request more information about myself or my experience? Would you like to know what is my favourite ice cream or pizza? Send me an email or find me on social media, I will reply as quick as possible. I'm always happy to have a chat!</p>
+                <ul class="horizontal-list">
+                    <li><a href="mailto:{{ site.email }}"><button class="white-button">Say Hello</button></a></li>
+                    <li><a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
+                    <li><a href="https://dev.to/{{ site.dev_username }}/" target="_blank"><i class="fab fa-2x fa-dev"></i></i></a></li>
+                    <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/{{ site.instagram_username }}/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        {% include footer.html %}
+    </body>
+    <script src="{{site.url}}/assets/scripts/main.js"></script>
+</html>
