--- a/assets/main.css
+++ b/assets/main.css
@@ -249,81 +249,6 @@ header {
   color: #FFFFFF;
 }
 
-header nav {
-  padding: 1rem 0rem 0rem 3rem;
-}
-
-@media (min-width: 1160px) {
-  header nav {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 4fr 2.5fr;
-        grid-template-columns: 4fr 2.5fr;
-  }
-}
-
-header nav .navigation {
-  display: none;
-  list-style-type: none;
-}
-
-@media (min-width: 1160px) {
-  header nav .navigation {
-    display: block;
-  }
-}
-
-header nav li a {
-  margin: .5rem 5rem 0rem 5rem;
-  text-align: center;
-  display: block;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-@media (min-width: 1160px) {
-  header nav li a {
-    float: left;
-    margin: 0rem 1.3rem 0rem 0rem;
-    padding: .2rem .5rem .2rem .5rem;
-    border-radius: 5px;
-    -webkit-transition: background-color 0.5s ease-out;
-    transition: background-color 0.5s ease-out;
-  }
-}
-
-header nav li a:hover {
-  padding: .2rem .5rem .2rem .5rem;
-  border-radius: 5px;
-  margin: 0rem 5rem 0rem 5rem;
-  background-color: #FF721E;
-  color: #1E2A39;
-  -webkit-transition: background-color 0.5s ease-out;
-  transition: background-color 0.5s ease-out;
-}
-
-@media (min-width: 1160px) {
-  header nav li a:hover {
-    margin: 0rem 1.3rem 0rem 0rem;
-    -webkit-transition: background-color 0.5s ease-out;
-    transition: background-color 0.5s ease-out;
-  }
-}
-
-header nav #collapseBtn {
-  float: right;
-  margin: 0rem 1.5rem;
-}
-
-header nav #collapseBtn .icon-bar {
-  display: block;
-  width: 22px;
-  height: 2px;
-  margin: 4px;
-  border-radius: 1px;
-  background-color: #1E2A39;
-}
-
 header .header-container {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -443,6 +368,81 @@ header .pictures #picture {
   -webkit-clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
           clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
   width: 157px;
+}
+
+nav {
+  padding: 1rem 0rem 0rem 3rem;
+}
+
+@media (min-width: 1160px) {
+  nav {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 4fr 2.5fr;
+        grid-template-columns: 4fr 2.5fr;
+  }
+}
+
+nav .navigation {
+  display: none;
+  list-style-type: none;
+}
+
+@media (min-width: 1160px) {
+  nav .navigation {
+    display: block;
+  }
+}
+
+nav li a {
+  margin: .5rem 5rem 0rem 5rem;
+  text-align: center;
+  display: block;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+@media (min-width: 1160px) {
+  nav li a {
+    float: left;
+    margin: 0rem 1.3rem 0rem 0rem;
+    padding: .2rem .5rem .2rem .5rem;
+    border-radius: 5px;
+    -webkit-transition: background-color 0.5s ease-out;
+    transition: background-color 0.5s ease-out;
+  }
+}
+
+nav li a:hover {
+  padding: .2rem .5rem .2rem .5rem;
+  border-radius: 5px;
+  margin: 0rem 5rem 0rem 5rem;
+  background-color: #FF721E;
+  color: #1E2A39;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+@media (min-width: 1160px) {
+  nav li a:hover {
+    margin: 0rem 1.3rem 0rem 0rem;
+    -webkit-transition: background-color 0.5s ease-out;
+    transition: background-color 0.5s ease-out;
+  }
+}
+
+nav #collapseBtn {
+  float: right;
+  margin: 0rem 1.5rem;
+}
+
+nav #collapseBtn .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  margin: 4px;
+  border-radius: 1px;
+  background-color: #1E2A39;
 }
 
 .about-card {
