Update css, build css and page for posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header>
     <nav class="navbar">
-        <a class="navbar-brand" href="/">
-            <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
-        </a>
+        <div class="navbar-brand">
+            <a href="{{site.url}}">
+                <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
+            </a>
+        </div>
         <button class="full-button visible-xs" id="collapseBtn" type="button" aria-pressed="false" aria-expanded="false" aria-controls="navigation">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
