--- a/assets/_sass/_home.scss
+++ b/assets/_sass/_home.scss
@@ -162,6 +162,8 @@
   }
 
   h1 {
+    font-size: 60px;
+    font-weight: 400;
     font-family: $cursive-font;
     color: color(text-color-light);
     margin-bottom: 1rem;
