--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,26 +1,30 @@
-<nav class="navbar">
-    <a class="navbar-brand" href="/">
-        <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
-    </a>
-    <button class="full-button visible-xs" id="collapseBtn" type="button" aria-pressed="false" aria-expanded="false" aria-controls="navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </button>
-    <ul class="navigation">
-        <li>
-            <a href="{{site.url}}">Home</a>
-        </li>
-        <li>
-            <a href="{{site.url}}/#about">About</a>
-        </li>
-        {% for link in site.pages %}
-            {% if link.title != None %}
+<header>
+    <nav class="navbar primary-background">
+        <div class="navbar-brand">
+            <a href="{{site.url}}">
+                <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
+            </a>
+        </div>
+        <button class="full-button visible-xs" id="collapseBtn" type="button" aria-pressed="false" aria-expanded="false" aria-controls="navigation">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <ul class="navigation">
                 <li>
-                    <a href="{{link.url}}">{{link.title}}</a>
+                    <a href="{{site.url}}">Home</a>
                 </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-</nav>
+                <li>
+                    <a href="{{site.url}}/#about">About</a>
+                </li>
+                {% for link in site.pages %}
+                    {% if link.title != None %}
+                        <li>
+                            <a href="{{link.url}}">{{link.title}}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+    </nav>
+</header>
