--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,30 +1,46 @@
-<!DOCTYPE html>
-<html lang="end">
-  {% include head.html %}
-    <body>
-      {% include header.html %}
+---
+layout: default
+---
+<div class="blog-post">
+  <div class="image-container">
+    <img class="post-image" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title | escape}}">
+  </div>
+  <div class="post-header">
+    <h3 class="white-text">{{page.categories}}</h3>
+    <h1 class="white-text larger">{{page.title}}</h1>
+    <p class="white-text">
+        {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
+        <span class="author"><i class="far fa-user"></i> {{site.author}}</span>
+        <span class="time"><i class="far fa-clock"></i> {{ page.date | date: date_format }}</span>
+    </p>
+  </div>
+  <div class="background"></div>
+  <div class="post-area">
+    <div class="text-container">
+      <h1 class="dark-text">{{page.subtitle}}</h1>
+      {{content}}
+    </div>
+  </div>
+</div>
 
-      <div class="img-fluid pad-top">
-        <img src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title | escape}}" style="z-index: 0; height: 500px; width: 100%; display: block; padding-top: 20px;">
+    
+    <!-- <div class="container">
+      <div class="post-header text-center">
+        <h1 class="drop-shadow">{{ page.title }}</h1>
+        <h3 class="text-muted"> {{page.subtitle}}</h3>
+        <p class="text-muted">
+          {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
+          <i class="far fa-clock"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
+          <i class="far fa-user"></i> {{site.author}} &emsp;
+          <i class="far fa-folder"></i> &nbsp;{{ page.categories }}
+        </p>
       </div>
-      
-      <div class="container">
-        <div class="post-header text-center">
-          <h1 class="drop-shadow">{{ page.title }}</h1>
-          <h3 class="text-muted"> {{page.subtitle}}</h3>
-          <p class="text-muted">
-            {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
-            <i class="far fa-clock"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
-            <i class="far fa-user"></i> {{site.author}} &emsp;
-            <i class="far fa-folder"></i> &nbsp;{{ page.categories }}
-          </p>
-        </div>
         
         <div class="narrow">
           {{ content }}
       
           <div class="social">
-            <hr class="spaced">
+            <hr class="spaced"> -->
               <div id="disqus_thread"></div>
               <script type="text/javascript">
                 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -41,8 +57,3 @@
           </div>    
         </div>
       </div>
-
-      {% include footer.html %}
-    </body>
-    <script src="{{site.url}}/assets/scripts/main.js"></script>
-</html>
