--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -31,6 +31,8 @@ header {
     h1 {
       padding: .5rem 0rem 0rem 1rem;
       font-family: $cursive-font;
+      font-size: 60px;
+      font-weight: 400;
       color: color(text-color-light);
     }
     p {
@@ -80,7 +82,6 @@ header {
       margin-right: 1rem;
     }
 
-    
     #shadow {
       position: absolute;
       background: color(background-color-darker);
@@ -102,7 +103,7 @@ header {
 }
 
 nav {
-  padding: 1rem 0rem 0rem 3rem;
+  padding: 1rem 0rem .5rem 3rem;
   @include desktop {
     display: grid;
     grid-template-columns: 4fr 2.5fr;
@@ -110,6 +111,7 @@ nav {
   .navigation {
     display: none;
     list-style-type: none;
+    padding-top: .5rem;
     @include desktop {
       display: block;
     }
@@ -145,7 +147,9 @@ nav {
   }
 
   #collapseBtn {
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 1.5rem;
     margin: 0rem 1.5rem;
 
     .icon-bar {
